--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 aniso8601==8.0.0
+astroid==2.3.3
 attrs==19.2.0
 Click==7.0
+colorama==0.4.3
 Flask==1.1.1
 flask-restplus==0.13.0
+flask-swagger==0.2.14
 importlib-metadata==0.23
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
 jsonschema==3.1.1
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 more-itertools==7.2.0
+pylint==2.4.4
 pyrsistent==0.15.4
 pytz==2019.3
+PyYAML==5.3
 six==1.12.0
+typed-ast==1.4.0
 Werkzeug==0.16.0
+wrapt==1.11.2
 zipp==0.6.0
