--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ jsonschema==3.1.1
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+requests==2.23.0
 more-itertools==7.2.0
 pylint==2.4.4
 pyrsistent==0.15.4
